GoalTracker/force-app/main/default/objects/CMU_Batch_Setting__mdt/CMU_Batch_Setting__mdt.object-meta.xml
<CustomObject>
    <label>CMU Batch Setting</label>
    <pluralLabel>CMU Batch Settings</pluralLabel>
</CustomObject>