GoalTracker/force-app/main/default/objects/CMU_Batch_Setting__mdt/fields/Days_Since_Update__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Update__c</fullName>
    <label>Days Since Update</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>