GoalTracker/force-app/main/default/objects/CMU_Batch_Setting__mdt/fields/Emails__c.field-meta.xml
<CustomField>
    <fullName>Emails__c</fullName>
    <label>Emails</label>
    <type>TextArea</type>
</CustomField>